--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8089
 server.address=0.0.0.0
 spring.application.name=multitenancy
 # Global database connection (used for fetching tenant details)
@@ -8,3 +8,4 @@ spring.datasource.password=kirti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.type=com.example.multitenancy.config.TenantAwareDataSource
+spring.main.allow-circular-references=true
